CHANGES IN FLTK 1.1.8

	- Documentation fixes (STR #1454, STR #1455, STR #1456,
	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
	  STR #1639, STR #1645, STR #1644, STR #1792, STR #1793,
	  STR #1742, STR #1777, STR #1794, STR #1827, STR #1843,
	  STR #1796, STR #1815, STR #1726, STR #1753)
	- FLUID checks for seperately declared callbacks to 
	  avoid a bogus "extern" declaration (STR #1776)
	- Added "protected" class memebrs in FLUID
	- Double-clicking a widget in a FLUID layout will show 
	  the item in the widget browser
	- Fixed color highlighting in Text_Display
	- Fixed 16 bit PNM image support (STR #1847)
	- Fixed exposure event on zero size windows (STR #1824)
	- Fixed overlay offset for OS X Quartz (STR #1729)
	- gl_font() support for Xft+X11 (STR #1809)
	- Fl_Gl_Window::mode() needed to hide and show the window
	  when toggling stereo mode (STR #1846)
	- Fl_Gl_Window::show() did not work reliably on Mac OS X
	  (STR #1707)
	- Added Fl_Group::clip_children() methods to support
	  automatic clipping of child widget drawing (STR #1844)
	- Fl_Browser_ and friends now support FL_WHEN_ENTER_KEY
	  for both Enter/Return and double-clicks (STR #1818)
	- Fl_Help_View did not release the images it used (STR
	  #1817)
	- Shared libraries would not build on 64-bit Linux
	  systems with an existing non-PIC FLTK installation
	  (STR #1791)
	- Fl_Browser::hide() and Fl_Browser::show() did not
	  correctly update the scrollbar (STR #1724)
	- The configure script now shows a summry of the
	  configuration results (STR #1810)
	- "fltk-config --use-* --libs" did not list all of the
	  dependent libraries (STR #1799)
	- Hiding a nested window on WIN32 caused 100% CPU (STR #1748)
	- Changing the window size in FLUID would not mark the 
	  project as modified (STR #1751)
	- Fixed fl_filename_isdir for "/"-path (STR #1761)
	- Fixed Fl_Chart drawing (STR #1756)
	- Fixed mapping of subwindows with unmapped parent
	  windows (STR #1706)